--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "iris-dsc-starter",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "A simple starter prepared for the DSC UTA workshop to get Gatsby up running quickly",
+  "version": "1.0.0",
+  "author": "Karan Rajpal <rajpal.karan73@gmail.com>",
   "dependencies": {
     "bulma": "^0.9.1",
     "gatsby": "^2.24.67",
